[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pytesseract>=0.3.13",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "supervision>=0.27.0.post1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.14",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]
